Updated for java 17 and decreased crater probability